<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userInfomation"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_userinfo" />
        <item
            android:id="@+id/nav_discountCode"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_discountcode" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_historyTransaction"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_historyTransaction" />
        <item
            android:id="@+id/nav_userChangePass"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_userChangePass" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_aboutus" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_logout" />
    </group>
</menu>