<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_activity_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_teal700"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/lable_Login_Activity"
        android:textColor="@color/white"
        android:textSize="16pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_activity_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_edt_activity_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_corner_10_border_gray"
                android:hint="@string/hint_userName"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_edt_activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_corner_10_border_gray"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_activity_login_savepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_saveAccount"
                android:layout_marginEnd="50dp"/>

            <Button
                android:id="@+id/btn_activity_login_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:textColor="@color/black"
                android:text="@string/btn_forgetPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_activity_login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_teal700_corner_10"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_activity_login_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.7"
            android:background="@drawable/bg_darkgray_corner_10"
            android:text="@string/btn_cancle"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_activity_login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_teal700_corner_10"
        android:text="@string/btn_signup"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_activity_login_connect"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/txt_dialog_connect" />

    <Button
        android:id="@+id/btn_activity_login_phone_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:text="@string/btn_fbLogin"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/btn_activity_login_gogle_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
        android:text="@string/btn_ggLogin"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:backgroundTint="#FFFFFF" />
</LinearLayout>
